@@ -31,6 +31,7 @@ public interface AdminServer {
     public void setZooKeeperServer(ZooKeeperServer zkServer);
 
     public class AdminServerException extends Exception {
+        private static final long serialVersionUID = 1L;
         public AdminServerException(String message, Throwable cause) {
             super(message, cause);
         }
