@@ -86,7 +86,7 @@ public class OSMXBean
             classRef = Class.forName("com.sun.management.UnixOperatingSystemMXBean");
             if (classRef.isInstance(osMbean)) {
                 mBeanMethod = classRef.getDeclaredMethod(mBeanMethodName,
-                new Class[0]);
+                new Class<?>[0]);
                 unixos = classRef.cast(osMbean);
                 return (Long)mBeanMethod.invoke(unixos);
             }
