@@ -62,6 +62,9 @@ BUGFIXES:
   ZOOKEEPER-1371: Remove dependency on log4j in the source code
   (Arshad Mohammad via rgs)
 
+  ZOOKEEPER-2329: Clear javac and javadoc warning from zookeeper
+  (Arshad Mohammad via rgs)
+
 IMPROVEMENTS:
 
   ZOOKEEPER-2270: Allow MBeanRegistry to be overridden for better unit tests
